--- a/search.html
+++ b/search.html
@@ -3,25 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/html5reset.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Planning Your Job/Internship Search</title>
 </head>
 <body>
 
   <header>
-    <a href="#maincontent">Skip to Main Content</a>
+    <div class="skip"><a href = "#maincontent">Skip to Main Content</a></div>
+    <div class="navigation">
     <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="resume.html">Resumes</a></li>
-        <li><a href="network.html">Networking & Connections</a></li>
-        <li><a href="search.html">Planning Your Job/Internship Search</a></li>
-      </ul>
+        <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "resume.html">Resume</a></li>
+            <li><a href = "network.html">Networking</a></li>
+            <li><a href = "search.html">Job Searching</a></li>
+        </ul>
     </nav>
+    </div>
     <h1>Planning Your Job/Internship Search</h1>
   </header>
 
-  <main id="maincontent">
+  <main class="container" id="maincontent">
     
     <section>
       <h2>Start Strong: Your Job Search Journey</h2>
