--- a/index.html
+++ b/index.html
@@ -3,31 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>UMSI Career Development Resource Hub</title>
 </head>
 <body>
 
-    <header>
-  <a href = "#maincontent">Skip to Main Content</a>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "network.html">Networking & Connections</a></li>
-                <li><a href = "search.html">Planning Your Job/Internship Search</a></li>
-            </ul>
-        </nav>
+  <header>
+    <div class="skip"><a href = "#maincontent">Skip to Main Content</a></div>
+    <div class="navigation">
+    <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+    <nav>
+        <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "resume.html">Resume</a></li>
+            <li><a href = "network.html">Networking</a></li>
+            <li><a href = "search.html">Job Searching</a></li>
+        </ul>
+    </nav>
+    </div>
     <h1>Welcome to the UMSI Career Development Resource Hub</h1>
 
-    </header>
-    <main id="maincontent">
+  </header>
+    <main class="container" id="maincontent">
     <section>
       <h2>Your Central Hub for Career Success at UMSI</h2>
       <p>
         Ready to take the next step toward your future career? The UMSI Career Development Resource Hub is your one-stop shop for trusted guidance, practical tools, and the latest information to help you thrive as a student and job-seeker. Whether you are just starting your exploration or getting ready to launch your career, you will find everything you need, organized for you.
       </p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <div class="video-wrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
     </section>
 
     <section>
