--- a/network.html
+++ b/network.html
@@ -3,25 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/html5reset.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Networking and Building Connections</title>
 </head>
 <body>
 
   <header>
-    <a href="#maincontent">Skip to Main Content</a>
+    <div class="skip"><a href = "#maincontent">Skip to Main Content</a></div>
+    <div class="navigation">
     <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="resume.html">Resumes</a></li>
-        <li><a href="network.html">Networking & Connections</a></li>
-        <li><a href="search.html">Planning Your Job/Internship Search</a></li>
-      </ul>
+        <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "resume.html">Resume</a></li>
+            <li><a href = "network.html">Networking</a></li>
+            <li><a href = "search.html">Job Searching</a></li>
+        </ul>
     </nav>
+    </div>
     <h1>Networking and Building Connections</h1>
   </header>
 
-  <main id="maincontent">
+  <main class="container" id="maincontent">
     
     <section>
       <h2>Build Your Network, Build Your Future</h2>
@@ -117,6 +121,7 @@
       </ul>
     </section>
 
+    <div class="net-grid">
     <section>
       <h2>Networking FAQ</h2>
       <ul>
@@ -133,6 +138,7 @@
         Use these resources as your toolkit for building relationships. Reach out to classmates, alumni, staff, and professionals—remember, the Michigan Networking community is here to support you! If you have any questions, <a href="https://umich.instructure.com/courses/137916/pages/talk-to-a-career-coach" target="_blank">meet with a career coach</a>.
       </p>
     </section>
+    </div>
     <!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage - this is for Networking and Building Connections, use the links provided below": and then pasted in the html contents of connections part in https://umich.instructure.com/courses/137916/modules"
     UMGPT. (2025). UMGPT ( GPT-4.1 Sep 5th version) [Large language model]. -->
   </main>
