--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
     <nav>
         <ul>
-            <li><a href = "index.html">Home</a></li>
+            <li class="active"><a href = "index.html">Home</a></li>
             <li><a href = "resume.html">Resume</a></li>
             <li><a href = "network.html">Networking</a></li>
             <li><a href = "search.html">Job Searching</a></li>
