--- a/network.html
+++ b/network.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href = "index.html">Home</a></li>
             <li><a href = "resume.html">Resume</a></li>
-            <li><a href = "network.html">Networking</a></li>
+            <li class="active"><a href = "network.html">Networking</a></li>
             <li><a href = "search.html">Job Searching</a></li>
         </ul>
     </nav>
