--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
     <nav>
         <ul>
             <li><a href = "index.html">Home</a></li>
-            <li><a href = "resume.html">Resume</a></li>
+            <li class="active"><a href = "resume.html">Resume</a></li>
             <li><a href = "network.html">Networking</a></li>
             <li><a href = "search.html">Job Searching</a></li>
         </ul>
