--- a/search.html
+++ b/search.html
@@ -18,7 +18,7 @@
             <li><a href = "index.html">Home</a></li>
             <li><a href = "resume.html">Resume</a></li>
             <li><a href = "network.html">Networking</a></li>
-            <li><a href = "search.html">Job Searching</a></li>
+            <li class="active"><a href = "search.html">Job Searching</a></li>
         </ul>
     </nav>
     </div>
