--- a/network.html
+++ b/network.html
@@ -42,46 +42,67 @@
     <section>
       <h2>Strategic Networking</h2>
       <p>
-        A strong network starts with a thoughtful strategy. At UMSI, setting clear goals, identifying key contacts, and planning your approach are essential steps to making networking both effective and rewarding.
+        A strong network starts with a thoughtful strategy. At UMSI, setting clear goals,
+        identifying key contacts, and planning your approach are essential steps to making
+        networking both effective and rewarding.
       </p>
-      <ul>
-        <li>
-          <a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?usp=sharing" target="_blank" rel="noopener">[Handout] Building a List for Strategic Networking</a> - develop and organize your list of potential networking contacts.
-        </li>
-        <li>
-          <a href="https://docs.google.com/presentation/d/1R6azi49e7vd3ubRtdm33qG6Aq3bLBDBue7blM6pv49I/edit?usp=sharing" target="_blank" rel="noopener">[Workshop Slides] Intro to Making Connections</a> - conversation tips, networking etiquette, and follow-up strategies.
-        </li>
-        <li>
-          <a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit#heading=h.f7yduyb84h87" target="_blank" rel="noopener">AI Prompt Resource Guide: Networking</a> - how AI tools like ChatGPT can help brainstorm networking messages, introductions, and meeting questions.
-        </li>
-        <li>
-          <a href="https://umich.peoplegrove.com/hub/ucan/home" target="_blank" rel="noopener">University Career Alumni Networking (UCAN)</a> - connect with Michigan alumni for mentorship, informational interviews, and professional growth.
-        </li>
-        <li>
-          <a href="https://docs.google.com/document/d/1633aBaWXIZW_ImTP-jKKN0QNXK9-RpXXmVznRgA4ZHQ/edit?usp=sharing" target="_blank" rel="noopener">Elevator Pitch Rubric</a> - guidance for crafting and practicing a strong self-introduction.
-        </li>
-      </ul>
+
+      <div class="card-list">
+        <a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+          <h3>[Handout] Building a List for Strategic Networking</h3>
+          <p>Develop and organize your list of potential networking contacts.</p>
+        </a>
+
+        <a href="https://docs.google.com/presentation/d/1R6azi49e7vd3ubRtdm33qG6Aq3bLBDBue7blM6pv49I/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+          <h3>[Workshop Slides] Intro to Making Connections</h3>
+          <p>Conversation tips, networking etiquette, and follow-up strategies.</p>
+        </a>
+
+        <a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit#heading=h.f7yduyb84h87" target="_blank" rel="noopener" class="card">
+          <h3>AI Prompt Resource Guide: Networking</h3>
+          <p>How AI tools like ChatGPT can help brainstorm networking messages, introductions, and meeting questions.</p>
+        </a>
+
+        <a href="https://umich.peoplegrove.com/hub/ucan/home" target="_blank" rel="noopener" class="card">
+          <h3>University Career Alumni Networking (UCAN)</h3>
+          <p>Connect with Michigan alumni for mentorship, informational interviews, and professional growth.</p>
+        </a>
+
+        <a href="https://docs.google.com/document/d/1633aBaWXIZW_ImTP-jKKN0QNXK9-RpXXmVznRgA4ZHQ/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+          <h3>Elevator Pitch Rubric</h3>
+          <p>Guidance for crafting and practicing a strong self-introduction.</p>
+        </a>
+      </div>
     </section>
+
 
     <section>
       <h2>Conference and Career Fair Preparation</h2>
       <p>
         Conferences and career fairs are prime opportunities to meet professionals and recruiters. Use these resources to plan ahead and make a strong impression.
       </p>
-      <ul>
-        <li>
-          <a href="https://docs.google.com/presentation/d/1dwwMvJIaR2lH_t25Pwnw8otHhWx3ww_46mWm3bARzo8/edit?usp=sharing" target="_blank" rel="noopener">[Workshop Slides] Conference Prep Workshop</a> - strategies to prepare for and navigate conferences successfully.
-        </li>
-        <li>
-          <a href="https://docs.google.com/spreadsheets/d/1JtqyC7YSip571jGJjw8JTzCfQSQQX-VmIV4KS_PZ1EE/edit?usp=sharing" target="_blank" rel="noopener">[Handout] Conference Preparation Template</a> - a planning tool to organize conference goals, sessions, and contacts.
-        </li>
-        <li>
-          <a href="https://docs.google.com/presentation/d/1ZQG4dY5Let1iot2GuKhV1mO_vgbvxv4YTNE2HP2qqf8/edit?usp=sharing" target="_blank" rel="noopener">[Workshop Slides] 2024 Career Fair Prep</a> - tips for making a strong impression at the UMSI career fair.
-        </li>
-        <li>
-          <a href="https://www.dropbox.com/scl/fi/1it97skwtspcm2yuhf8qq/Winter-2024_Career-Fair-Prep-Workshop.mp4?rlkey=we1hk8fy3dr9tgtvgvo0bh4dn&dl=0" target="_blank" rel="noopener">[Recording] 2024 Career Fair Prep Workshop</a> - video recording of the workshop for review and practice.
-        </li>
-      </ul>
+      <div class="card-list">
+        <a href="https://docs.google.com/presentation/d/1dwwMvJIaR2lH_t25Pwnw8otHhWx3ww_46mWm3bARzo8/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+          <h3>[Workshop Slides] Conference Prep Workshop</h3>
+          <p>Strategies to prepare for and navigate conferences successfully.</p>
+        </a>
+
+        <a href="https://docs.google.com/spreadsheets/d/1JtqyC7YSip571jGJjw8JTzCfQSQQX-VmIV4KS_PZ1EE/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+          <h3>[Handout] Conference Preparation Template</h3>
+          <p>A planning tool to organize conference goals, sessions, and contacts.</p>
+        </a>
+
+        <a href="https://docs.google.com/presentation/d/1ZQG4dY5Let1iot2GuKhV1mO_vgbvxv4YTNE2HP2qqf8/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+          <h3>[Workshop Slides] 2024 Career Fair Prep</h3>
+          <p>Tips for making a strong impression at the UMSI career fair.</p>
+        </a>
+
+        <a href="https://www.dropbox.com/scl/fi/1it97skwtspcm2yuhf8qq/Winter-2024_Career-Fair-Prep-Workshop.mp4?rlkey=we1hk8fy3dr9tgtvgvo0bh4dn&dl=0" target="_blank" rel="noopener" class="card">
+          <h3>[Recording] 2024 Career Fair Prep Workshop</h3>
+          <p>Video recording of the workshop for review and practice.</p>
+        </a>
+      </div>
+
     </section>
 
     <section>
@@ -89,21 +110,31 @@
       <p>
         Effective outreach messages can open doors to new opportunities. Use these guides and tools to craft professional, clear, and authentic communication.
       </p>
-      <ul>
-        <li>
-          <a href="https://docs.google.com/document/d/1cwq2KtdKQbO-tICHKUyKRA3QY4_3VJ8NLC2kwPBY4dI/edit?usp=sharing" target="_blank" rel="noopener">[Handout] Networking Outreach Email Examples</a> - sample emails to guide your outreach to professionals and alumni.
-        </li>
-        <li>
-          <a href="https://resumeworded.com/networking-email-templates/" target="_blank" rel="noopener">Networking Email Templates from Resume Worded</a> - ready-to-use examples of outreach emails for different scenarios.
-        </li>
-        <li>
-          Lettersmith - Support for Professional Communication:
-          <ul>
-            <li><a href="https://youtu.be/9IDVnvOd8cY" target="_blank" rel="noopener">Tool Introduction (Video)</a> - short video overview of how to use Lettersmith effectively.</li>
-            <li><a href="https://docs.google.com/document/d/1XbQsIwQ8zbqqqeFeZmrAvsHuBd9ppSoyL_Ty7Fe0TGA/edit" target="_blank" rel="noopener">Quick Reference Guide (Handout)</a> - step-by-step guide for drafting messages with Lettersmith.</li>
-          </ul>
-        </li>
-      </ul>
+      <div class="card-list">
+        <a href="https://docs.google.com/document/d/1cwq2KtdKQbO-tICHKUyKRA3QY4_3VJ8NLC2kwPBY4dI/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+          <h3>[Handout] Networking Outreach Email Examples</h3>
+          <p>Sample emails to guide your outreach to professionals and alumni.</p>
+        </a>
+
+        <a href="https://resumeworded.com/networking-email-templates/" target="_blank" rel="noopener" class="card">
+          <h3>Networking Email Templates from Resume Worded</h3>
+          <p>Ready-to-use examples of outreach emails for different scenarios.</p>
+        </a>
+
+        <div class="card-group">
+          <h3>Lettersmith - Support for Professional Communication</h3>
+          <div class="sub-card-list">
+            <a href="https://youtu.be/9IDVnvOd8cY" target="_blank" rel="noopener" class="card sub-card">
+              <h4>Tool Introduction (Video)</h4>
+              <p>Short video overview of how to use Lettersmith effectively.</p>
+            </a>
+            <a href="https://docs.google.com/document/d/1XbQsIwQ8zbqqqeFeZmrAvsHuBd9ppSoyL_Ty7Fe0TGA/edit" target="_blank" rel="noopener" class="card sub-card">
+              <h4>Quick Reference Guide (Handout)</h4>
+              <p>Step-by-step guide for drafting messages with Lettersmith.</p>
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section>
@@ -111,14 +142,18 @@
       <p>
         Informational interviews are an opportunity to learn from professionals, ask insightful questions, and leave a positive impression as you explore your field. Make the most of these conversations by researching your contacts, preparing meaningful questions, and showing genuine curiosity and professionalism.
       </p>
-      <ul>
-        <li>
-          <a href="https://docs.google.com/presentation/d/1QR0UA8V4d_hjHuayVbzF5_bx8d_8m3Ohvx9e5SiBodg/edit?usp=sharing" target="_blank" rel="noopener">[Workshop Slides] Informational Interviews Using TIARA</a> - framework for structuring conversations to maximize learning and connection.
-        </li>
-        <li>
-          <a href="/courses/137916/modules/items/2944812" target="_blank" rel="noopener">[Handout] Informational Interviews - TIARA Method (requires login)</a> - printable resource for preparing and guiding informational interviews.
-        </li>
-      </ul>
+      <div class="card-list">
+        <a href="https://docs.google.com/presentation/d/1QR0UA8V4d_hjHuayVbzF5_bx8d_8m3Ohvx9e5SiBodg/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+          <h3>[Workshop Slides] Informational Interviews Using TIARA</h3>
+          <p>Framework for structuring conversations to maximize learning and connection.</p>
+        </a>
+
+        <a href="/courses/137916/modules/items/2944812" target="_blank" rel="noopener" class="card">
+          <h3>[Handout] Informational Interviews – TIARA Method (requires login)</h3>
+          <p>Printable resource for preparing and guiding informational interviews.</p>
+        </a>
+      </div>
+
     </section>
 
     <div class="net-grid">
@@ -144,8 +179,12 @@
   </main>
 
   <footer>
-    <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office</a></p>
+      <p>© Copyrights <span id="year"></span> by Xiaomi. All rights reserved.</p>
   </footer>
+  <script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+    console.log("copyright year shows up.");
+  </script>
 
 </body>
 </html>
