--- a/search.html
+++ b/search.html
@@ -55,52 +55,101 @@
     <p>
         Explore these curated resources to structure, organize, and energize your search. They are grouped to guide you from planning to reflection and execution.
     </p>
-
+    <div class="resourcelist">
+    <div class="resourceitem">
     <h3>1. Get Started With Career Planning</h3>
     <p>
         Begin by clarifying your career direction and understanding recruiting timelines so you can move forward with focus and intention.
     </p>
-    <ul>
-        <li><a href="https://docs.google.com/document/d/1_Mh2N-azjpH-WAf0Z6T51D6ag5ciYw4HpNwc0T6j_rM/edit?usp=sharing" target="_blank">Strategic Job and Internship Plan</a> - build an action plan for your search, including goal-setting and timelines.</li>
-        <li><a href="https://docs.google.com/document/d/19kWFf53hYuAs-aa9igwV87WosoKJa1AsX_OUqLWjENk/edit?usp=sharing" target="_blank">Job & Internship Search Planning Worksheet</a> - reflect on personal interests and organizational fit.</li>
-        <li><a href="https://docs.google.com/document/d/14Q3v3K5_SwgIAbkhCgyX9Vd3JPs9nR245ACvP3Csq5I/edit?usp=sharing" target="_blank">Recruiting Timeline</a> - review industry-specific recruiting cycles to better plan your applications.</li>
-    </ul>
+    </div>
+    <div class="card-list resourcecard">
+      <a href="https://docs.google.com/document/d/1_Mh2N-azjpH-WAf0Z6T51D6ag5ciYw4HpNwc0T6j_rM/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>Strategic Job and Internship Plan</h3>
+        <p>Build an action plan for your search, including goal-setting and timelines.</p>
+      </a>
 
+      <a href="https://docs.google.com/document/d/19kWFf53hYuAs-aa9igwV87WosoKJa1AsX_OUqLWjENk/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>Job & Internship Search Planning Worksheet</h3>
+        <p>Reflect on personal interests and organizational fit.</p>
+      </a>
+
+      <a href="https://docs.google.com/document/d/14Q3v3K5_SwgIAbkhCgyX9Vd3JPs9nR245ACvP3Csq5I/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>Recruiting Timeline</h3>
+        <p>Review industry-specific recruiting cycles to better plan your applications.</p>
+      </a>
+    </div>
+
+    <div class="resourceitem">
     <h3>2. Organize Your Search Process</h3>
     <p>
         Staying organized will help you manage multiple applications, follow-ups, and deadlines without feeling overwhelmed.
     </p>
-    <ul>
-        <li><a href="https://docs.google.com/spreadsheets/d/1fT4YeP1M5moXtFYniTkyb-CCLV7PZ75B9iJFH-XWMv4/edit?usp=sharing" target="_blank">Job Search Plan & Application Tracker</a> - log applications, contacts, and deadlines.</li>
-        <li><a href="https://docs.google.com/document/d/1fblfjC2Tki2MZOminwoIonvJYJ5tiBTKP8isaCzaIfY/edit?usp=sharing" target="_blank">Job & Internship Search Checklist</a> - step-by-step guidance for a complete search.</li>
-    </ul>
+    </div>
+    <div class="card-list resourcecard">
+      <a href="https://docs.google.com/spreadsheets/d/1fT4YeP1M5moXtFYniTkyb-CCLV7PZ75B9iJFH-XWMv4/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>Job Search Plan & Application Tracker</h3>
+        <p>Log applications, contacts, and deadlines.</p>
+      </a>
 
+      <a href="https://docs.google.com/document/d/1fblfjC2Tki2MZOminwoIonvJYJ5tiBTKP8isaCzaIfY/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>Job & Internship Search Checklist</h3>
+        <p>Step-by-step guidance for a complete search.</p>
+      </a>
+    </div>
+
+    <div class="resourceitem">
     <h3>3. Reflect On Strengths and Priorities</h3>
     <p>
         Self-reflection helps you evaluate what matters most to you in a workplace so that your search aligns with your values and goals.
     </p>
-    <ul>
-        <li><a href="https://docs.google.com/spreadsheets/d/17ZtvEgIouUYdTgXBk9yI8fZQeAeqhrK9jHB8mF1KLzY/edit?usp=sharing" target="_blank">Identifying Your Workplace Values</a> - clarify what matters to you most in a work environment.</li>
-        <li><a href="https://docs.google.com/document/d/1PXcEpUmqIx0wdJbSFPSGQDrWMRyZEe_YFoQHtKZDko4/edit?usp=sharing" target="_blank">Critical Career Factors Inventory</a> - prioritize factors like compensation, culture, and location.</li>
-    </ul>
+    </div>
+    <div class="card-list resourcecard">
+      <a href="https://docs.google.com/spreadsheets/d/17ZtvEgIouUYdTgXBk9yI8fZQeAeqhrK9jHB8mF1KLzY/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>Identifying Your Workplace Values</h3>
+        <p>Clarify what matters to you most in a work environment.</p>
+      </a>
 
+      <a href="https://docs.google.com/document/d/1PXcEpUmqIx0wdJbSFPSGQDrWMRyZEe_YFoQHtKZDko4/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>Critical Career Factors Inventory</h3>
+        <p>Prioritize factors like compensation, culture, and location.</p>
+      </a>
+    </div>
+
+    <div class="resourceitem">
     <h3>4. Boost Your Search With Technology & AI</h3>
     <p>
         Leverage digital tools and AI to save time, strengthen your applications, and discover new strategies for connecting with employers.
     </p>
-    <ul>
-        <li><a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit#heading=h.tds98meydr4t" target="_blank">AI Prompt Resource Guide</a> - sample prompts for resumes, cover letters, and networking.</li>
-        <li><a href="https://www.dropbox.com/scl/fi/vdtmy0snc3qlt3z4jjpen/LinkedIn-ChatGPT-Secrets_video.mp4?dl=0" target="_blank">LinkedIn & ChatGPT Secrets Recording</a> - strategies for using AI alongside LinkedIn.</li>
-    </ul>
+    </div>
+    <div class="card-list resourcecard">
+      <a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit#heading=h.tds98meydr4t" target="_blank" rel="noopener" class="card">
+        <h3>AI Prompt Resource Guide</h3>
+        <p>Sample prompts for resumes, cover letters, and networking.</p>
+      </a>
 
+      <a href="https://www.dropbox.com/scl/fi/vdtmy0snc3qlt3z4jjpen/LinkedIn-ChatGPT-Secrets_video.mp4?dl=0" target="_blank" rel="noopener" class="card">
+        <h3>LinkedIn & ChatGPT Secrets Recording</h3>
+        <p>Strategies for using AI alongside LinkedIn.</p>
+      </a>
+    </div>
+    <div class="resourceitem">
     <h3>5. Attend Workshops & Learn From Experts</h3>
     <p>
         Gain insights from career experts and UMSI-led workshops to strengthen your job search strategies and stay ahead in the process.
     </p>
-    <ul>
-        <li><a href="https://docs.google.com/presentation/d/1CAvzzGn6e7VyjItP8DqWiu44lOfs-KU5vz9ImupaPdY/edit?usp=sharing" target="_blank">Prep for Fall Recruitment</a> - slides and checklists for busy recruiting cycles.</li>
-        <li><a href="https://docs.google.com/presentation/d/1Yw5BFwowlfjZ9KTy-P0AzUdBdx3pyTUYfAGhqEvgtSA/edit#slide=id.g9397362aad_0_15" target="_blank">2 Hour Job Search Workshop</a> - a proven system for networking and applications.</li>
-    </ul>
+    </div>
+    <div class="card-list resourcecard">
+      <a href="https://docs.google.com/presentation/d/1CAvzzGn6e7VyjItP8DqWiu44lOfs-KU5vz9ImupaPdY/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>Prep for Fall Recruitment</h3>
+        <p>Slides and checklists for managing busy recruiting cycles.</p>
+      </a>
+
+      <a href="https://docs.google.com/presentation/d/1Yw5BFwowlfjZ9KTy-P0AzUdBdx3pyTUYfAGhqEvgtSA/edit#slide=id.g9397362aad_0_15" target="_blank" rel="noopener" class="card">
+        <h3>2 Hour Job Search Workshop</h3>
+        <p>A proven system for efficient networking and job applications.</p>
+      </a>
+    </div>
+    </div>
     </section>
 
 
@@ -119,10 +168,12 @@
   </main>
 
   <footer>
-    <p>University of Michigan School of Information | 
-      <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office</a>
-    </p>
+      <p>© Copyrights <span id="year"></span> by Xiaomi. All rights reserved.</p>
   </footer>
+  <script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+    console.log("copyright year shows up.");
+  </script>
 
 </body>
 </html>
