--- a/index.html
+++ b/index.html
@@ -57,13 +57,33 @@
       </div>
 
         <h3>Most Popular Resources</h3>
-        <ul>
-          <li><a href="https://docs.google.com/document/d/1_1GfDJyVGIgE82MZjVhuWT_aB_2Hcj1NN62FUCXoR_o/edit?tab=t.0" target="_blank">UMSI Resume Guide</a></li>
-          <li><a href="https://umich.instructure.com/courses/137916/pages/attend-an-event" target="_blank">Attend a Career Event</a></li>
-          <li><a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?tab=t.0" target="_blank">Networking Tips</a></li>
-          <li><a href="https://docs.google.com/presentation/d/15n-XqsFEntdbkZz89K-ohf7Or1NnCt5CQNDG-6fh2a0/edit?usp=sharing" target="_blank">Interview Preparation</a></li>
-          <li><a href="https://si-umich.12twenty.com/Login" target="_blank">Career Link: UMSI's Exclusive Career Portal</a></li>
-        </ul>
+        <div class="card-list">
+          <a href="https://docs.google.com/document/d/1_1GfDJyVGIgE82MZjVhuWT_aB_2Hcj1NN62FUCXoR_o/edit?tab=t.0" target="_blank" rel="noopener" class="card">
+            <h3>UMSI Resume Guide</h3>
+            <p>Essential tips, structure, and examples to craft a strong UMSI resume.</p>
+          </a>
+
+          <a href="https://umich.instructure.com/courses/137916/pages/attend-an-event" target="_blank" rel="noopener" class="card">
+            <h3>Attend a Career Event</h3>
+            <p>Explore upcoming workshops, panels, and networking opportunities hosted by UMSI.</p>
+          </a>
+
+          <a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?tab=t.0" target="_blank" rel="noopener" class="card">
+            <h3>Networking Tips</h3>
+            <p>Learn effective strategies to build connections with professionals and peers.</p>
+          </a>
+
+          <a href="https://docs.google.com/presentation/d/15n-XqsFEntdbkZz89K-ohf7Or1NnCt5CQNDG-6fh2a0/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+            <h3>Interview Preparation</h3>
+            <p>Review slides and advice to help you confidently prepare for interviews.</p>
+          </a>
+
+          <a href="https://si-umich.12twenty.com/Login" target="_blank" rel="noopener" class="card">
+            <h3>Career Link</h3>
+            <p>Access UMSI’s exclusive career portal for job postings, events, and appointments.</p>
+          </a>
+        </div>
+
 
     </section>
 
@@ -109,7 +129,11 @@
     UMGPT. (2025). UMGPT ( GPT-4.1 August 25th version) [Large language model]. -->
     </main>
     <footer>
-        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
+        <p>© Copyrights <span id="year"></span> by Xiaomi. All rights reserved.</p>
     </footer>
+    <script>
+      document.getElementById("year").innerHTML = new Date().getFullYear();
+      console.log("copyright year shows up.");
+    </script>
 </body>
 </html>
