--- a/resume.html
+++ b/resume.html
@@ -56,60 +56,86 @@
     <p>
       Whether you are just beginning or refining an existing draft, these resources provide a step-by-step path to building a strong resume. Explore them in order or jump directly to the ones most relevant for you.
     </p>
-
+    <div class="resourcelist">
+    <div class="resourceitem">
     <h3>1. Start with Templates & Guides</h3>
     <p>
       Begin with resources designed specifically for UMSI students. These will give you a strong foundation in both format and content:
     </p>
-    <ul>
-      <li>
-        <a href="https://drive.google.com/drive/folders/1egpTpRsmzuNzB4tRX2dkFEzptMhyjYtR?usp=drive_link" target="_blank">UMSI-Approved Resume Templates</a> - ready-to-use formats that align with employer expectations.
-      </li>
-      <li>
-        <a href="https://docs.google.com/document/d/1_1GfDJyVGIgE82MZjVhuWT_aB_2Hcj1NN62FUCXoR_o/edit?usp=sharing" target="_blank">UMSI Resume Guide and Rubric</a> - comprehensive tips, formatting rules, and examples to get you started.
-      </li>
-      <li>
-        <a href="https://docs.google.com/presentation/d/1q0hzNdFADei-jnFNWXYSWdvDsFPNojXcdaPadQQTUgg/edit?usp=sharing" target="_blank">Refresh Your Resume Orientation Workshop</a> - slides from an orientation session designed to help students update and refine resumes.
-      </li>
-    </ul>
+    </div>
+    <div class="card-list resourcecard">
+      <a href="https://drive.google.com/drive/folders/1egpTpRsmzuNzB4tRX2dkFEzptMhyjYtR?usp=drive_link" target="_blank" rel="noopener" class="card">
+        <h3>UMSI-Approved Resume Templates</h3>
+        <p>Ready-to-use formats that align with employer expectations.</p>
+      </a>
 
+      <a href="https://docs.google.com/document/d/1_1GfDJyVGIgE82MZjVhuWT_aB_2Hcj1NN62FUCXoR_o/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>UMSI Resume Guide and Rubric</h3>
+        <p>Comprehensive tips, formatting rules, and examples to get you started.</p>
+      </a>
+
+      <a href="https://docs.google.com/presentation/d/1q0hzNdFADei-jnFNWXYSWdvDsFPNojXcdaPadQQTUgg/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>Refresh Your Resume Orientation Workshop</h3>
+        <p>Slides from an orientation session designed to help students update and refine resumes.</p>
+      </a>
+    </div>
+
+    <div class="resourceitem">
     <h3>2. Enhance & Tailor Your Resume</h3>
     <p>
       Once you have the basics, use these resources to strengthen your bullet points, tailor to job postings, and make your resume stand out:
     </p>
-    <ul>
-      <li>
-        <a href="https://docs.google.com/document/d/1-EVZYH_Fic4mfLVGOXyHTSeRwBWmmi2WHSgGDLGGPEs/edit?usp=sharing" target="_blank">How to Write Impactful Bullets</a> - strategies for action verbs and results-driven descriptions.
-      </li>
-      <li>
-        <a href="https://youtu.be/x0Dfw4LFWvw" target="_blank">Incorporating Job Descriptions Into Your Resume (Video)</a> - learn how to mirror job posting language for ATS compatibility.
-      </li>
-      <li>
-        <a href="https://docs.google.com/presentation/d/1zKegYumYvZG0y5vAWU91py8K_cHfAG3f22DUA2e_H9c/edit?usp=sharing" target="_blank">How to Add Course Projects to Your Resume</a> - guidance for showcasing class projects when professional experience is limited.
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/learning-login/share?account=42573940&amp;forceAccount=false&amp;redirect=https%3A%2F%2Fwww.linkedin.com%2Flearning%2Foptimize-your-resume-for-applicant-tracking-systems%3Ftrk%3Dshare_ent_url%26shareId%3DKWfpgzmsRHKPR%252BG8N%252Fw%252Bkg%253D%253D" target="_blank">Optimize Your Resume for ATS (LinkedIn Learning Webinar)</a> - a free U-M webinar on formatting and keyword optimization for applicant tracking systems.
-      </li>
-      <li>
-        <a href="https://resumeworded.com/umich" target="_blank">Resume Worded</a> - AI-powered instant feedback on resumes, available for U-M students.
-      </li>
-    </ul>
+    </div>
+    <div class="card-list resourcecard">
+      <a href="https://docs.google.com/document/d/1-EVZYH_Fic4mfLVGOXyHTSeRwBWmmi2WHSgGDLGGPEs/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>How to Write Impactful Bullets</h3>
+        <p>Strategies for action verbs and results-driven descriptions.</p>
+      </a>
 
+      <a href="https://youtu.be/x0Dfw4LFWvw" target="_blank" rel="noopener" class="card">
+        <h3>Incorporating Job Descriptions Into Your Resume (Video)</h3>
+        <p>Learn how to mirror job posting language for ATS compatibility.</p>
+      </a>
+
+      <a href="https://docs.google.com/presentation/d/1zKegYumYvZG0y5vAWU91py8K_cHfAG3f22DUA2e_H9c/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>How to Add Course Projects to Your Resume</h3>
+        <p>Guidance for showcasing class projects when professional experience is limited.</p>
+      </a>
+
+      <a href="https://www.linkedin.com/learning-login/share?account=42573940&amp;forceAccount=false&amp;redirect=https%3A%2F%2Fwww.linkedin.com%2Flearning%2Foptimize-your-resume-for-applicant-tracking-systems%3Ftrk%3Dshare_ent_url%26shareId%3DKWfpgzmsRHKPR%252BG8N%252Fw%252Bkg%253D%253D" target="_blank" rel="noopener" class="card">
+        <h3>Optimize Your Resume for ATS (LinkedIn Learning Webinar)</h3>
+        <p>A free U-M webinar on formatting and keyword optimization for applicant tracking systems.</p>
+      </a>
+
+      <a href="https://resumeworded.com/umich" target="_blank" rel="noopener" class="card">
+        <h3>Resume Worded</h3>
+        <p>AI-powered instant feedback on resumes, available for U-M students.</p>
+      </a>
+    </div>
+
+    <div class="resourceitem">
     <h3>3. Specialized Resources</h3>
     <p>
       Finally, explore tailored resources for specific student groups or career paths:
     </p>
-    <ul>
-      <li>
-        <a href="https://docs.google.com/document/d/1vSu1MACWvr6as2WJJowAE1Lq0O0TTrzcc0m10uxn7FI/edit?usp=sharing" target="_blank">UMSI Transfer Student Resume Resource</a> - advice and examples for transfer students adapting their resumes.
-      </li>
-      <li>
-        <a href="https://docs.google.com/presentation/d/1bVkG-fxUVcAHRKBVt_NlDLRf0BIO_ySuVJsObn20RDw/edit?usp=sharing" target="_blank">Academic CV Workshop</a> - materials for students pursuing research or teaching positions, highlighting differences between CVs and resumes.
-      </li>
-      <li>
-        <a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit#heading=h.l4j7esgrm5ra" target="_blank">AI Prompt Resource Guide: Resumes</a> - examples of how to use generative AI tools for drafting, revising, and brainstorming resume content.
-      </li>
-    </ul>
+    </div>
+    <div class="card-list resourcecard">
+      <a href="https://docs.google.com/document/d/1vSu1MACWvr6as2WJJowAE1Lq0O0TTrzcc0m10uxn7FI/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>UMSI Transfer Student Resume Resource</h3>
+        <p>Advice and examples for transfer students adapting their resumes.</p>
+      </a>
+
+      <a href="https://docs.google.com/presentation/d/1bVkG-fxUVcAHRKBVt_NlDLRf0BIO_ySuVJsObn20RDw/edit?usp=sharing" target="_blank" rel="noopener" class="card">
+        <h3>Academic CV Workshop</h3>
+        <p>Materials for students pursuing research or teaching positions, highlighting differences between CVs and resumes.</p>
+      </a>
+
+      <a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit#heading=h.l4j7esgrm5ra" target="_blank" rel="noopener" class="card">
+        <h3>AI Prompt Resource Guide: Resumes</h3>
+        <p>Examples of how to use generative AI tools for drafting, revising, and brainstorming resume content.</p>
+      </a>
+    </div>
+    </div>
   </section>
   <!-- Content taken & from UMGPT with the prompt, "extract links from the following html contents and summarize what the links are about: [html contents of resume part in https://umich.instructure.com/courses/137916/modules]" UMGPT. (2025). UMGPT ( GPT-4.1 Sep 4th version) [Large language model]. -->
 
@@ -139,8 +165,12 @@
 
     </main>
     <footer>
-        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
-        </footer>
+        <p>© Copyrights <span id="year"></span> by Xiaomi. All rights reserved.</p>
+    </footer>
+    <script>
+      document.getElementById("year").innerHTML = new Date().getFullYear();
+      console.log("copyright year shows up.");
+    </script>
     
 </body>
 
