--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
   <header>
     <div class="skip"><a href = "#maincontent">Skip to Main Content</a></div>
     <div class="navigation">
-    <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+    <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo header">
     <nav>
         <ul>
             <li><a href = "index.html">Home</a></li>
@@ -166,10 +166,10 @@
     </main>
     <footer>
 
-      <img src="images/UMSI_signature_vertical_U_white.png" alt="UMSI logo" class="umsilogo">
+      <img src="images/UMSI_signature_vertical_U_white.png" alt="UMSI logo footer" class="umsilogo">
 
       <div class="footeraddress">
-        <h3>Address:</h3>
+        <h1>Address:</h1>
         <p>
             School of Information<br>
             University of Michigan<br>
@@ -179,7 +179,7 @@
       </div>
 
       <div class="footer-section">
-        <h3>Contact us:</h3>
+        <h1>Contact us:</h1>
         <a href="mailto:umsi.careers@umich.edu" target="_blank" aria-label="Gmail"><img src="images/gmail.png" alt="Gmail" class="social-icon"></a>
 
         <a href="https://www.linkedin.com/school/university-of-michigan---school-of-information/" target="_blank" aria-label="LinkedIn">
